Untested Eclipse suggested improvements